log/build_2023-06-29_14-59-23/planning/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/spider/gwpspider_ws/install/planning/lib/python3.10/site-packages/planning/path_planner.py", line 5
    from rclpy.executors import SingleThreadedExecutor()
                                                      ^
SyntaxError: invalid syntax

